@@ -17,6 +17,7 @@ import org.springframework.stereotype.Repository;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.edu.xmu.rag.core.model.Constants.MAX_RETURN;
 import static com.edu.xmu.rag.core.util.Common.cloneObj;
@@ -93,7 +94,7 @@ public class KnowledgeBaseDao {
         if (ret.isEmpty()) {
             return new ArrayList<>();
         } else {
-            return ret.stream().map(po -> cloneObj(po, KnowledgeBase.class)).toList();
+            return ret.stream().map(po -> cloneObj(po, KnowledgeBase.class)).collect(Collectors.toList());
         }
     }
 
@@ -103,7 +104,7 @@ public class KnowledgeBaseDao {
         if (ret.isEmpty()) {
             return new ArrayList<>();
         } else {
-            return ret.stream().map(po -> cloneObj(po, KnowledgeBase.class)).toList();
+            return ret.stream().map(po -> cloneObj(po, KnowledgeBase.class)).collect(Collectors.toList());
         }
     }
 }
